# simple-student-management-system

./: .gitignore  CMakeLists.txt  README.md  common_utils.cpp  common_utils.h  main.cpp  student.cpp  student.h  student_utils.cpp  student_utils.h
homework_project/: homework.cpp  homework.h  main.cpp  student_dev.cpp  student_dev.h  student_test.cpp  student_test.h
student_project/: main.cpp  student.cpp  student.h  student_utils.cpp  student_utils.h
